name:              gitit2
version:           0.0.0
license:           GPL
license-file:      LICENSE
author:            John MacFarlane
maintainer:        John MacFarlane
synopsis:          Next-generation version of gitit wiki server.
description:       A reimplementation of gitit in Yesod.  This is
                   a work in progress: many of gitit's features
                   are not yet implemented.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://gitit.net
data-files:        README.markdown
                   messages/en.msg
                   static/favicon.ico
                   static/robots.txt
                   static/js/bootstrap.min.js
                   static/js/jquery-1.7.2.min.js
                   static/js/jquery-ui-1.8.21.custom.min.js
                   static/img/logo.png
                   static/img/icons/feed.png
                   static/img/icons/folder.png
                   static/img/icons/page.png
                   static/img/glyphicons-halflings.png
                   static/img/glyphicons-halflings-white.png
                   static/css/custom.css
                   static/css/bootstrap.min.css
                   static/css/hk-pyg.css
                   static/css/print.css
                   static/css/screen.css
                   settings.yaml
                   data/FrontPage.page
                   data/Help.page
                   data/markup.Markdown
                   data/markup.RST
                   data/markup.HTML
                   data/markup.LaTeX
                   data/post-update

flag executable
  description:   Build the gitit executable.
  default:       True

Flag network-uri
  Description: Get Network.URI from the network-uri package
  Default: True
library
    exposed-modules: Network.Gitit2
                     Network.Gitit2.Routes
    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends:
                   aeson                          >= 0.9          && < 0.9.1
                 , base                            >= 4.8          && < 4.9
                 , blaze-builder               >= 0.4         && < 0.5
                 , blaze-html                   >= 0.8         && < 0.9
                 , blaze-markup              >= 0.7         && < 0.8
                 , bytestring                    >= 0.10       && < 0.11
                 , clientsession               >= 0.9
                 , conduit                        >= 1.2          && < 1.3
                 , containers                   >= 0.5          && < 0.6
                 , directory                      >= 1.2          && < 1.3
                 , filepath                        >= 1.4          && < 1.5
                 , filestore                       >= 0.5          && < 0.7
                 , hamlet                         >= 1.2          && < 1.3
                 , highlighting-kate         >= 0.6.1       && < 0.7
                 , hjsmin                          >= 0.1          && < 0.2
                 , HTTP                             >= 4000.3    && < 4000.4
                 , http-conduit                  >= 2.0          && < 2.2
                 , monad-control              >= 1.0          && < 1.1
                 , mtl                                >= 2.2          && < 2.3
                 , pandoc                          >= 1.16        && < 1.18
                 , pandoc-types                >= 1.16        && < 1.17
                 , random                          >= 1.1          && < 1.2
                 , shakespeare                  >= 2.0          && < 2.1
                 , syb                                 >= 0.4          && < 0.7
                 , template-haskell           >= 2.10        && < 2.11
                 , text                                >= 1.2          && < 1.4
                 , time                               >= 1.5          && < 1.6
                 , utf8-string                     >= 1.0           && < 1.1
                 , wai-extra                       >= 3.0           && < 3.1
                 , warp                               >= 3.2          && < 4.8
                 , xss-sanitize                   >= 0.3.5        && < 0.4
                 , yaml                               >= 0.8          && < 0.9
                 , yesod                             >= 1.4           && < 1.5
                 , yesod-core                     >= 1.4           && < 1.5
                 , yesod-form                     >= 1.4          && < 1.5
                 , yesod-newsfeed             >= 1.5          && < 1.6
                 , yesod-static                    >= 1.5          && < 1.6
    if flag(network-uri)
       Build-Depends: network-uri                >= 2.6        && < 2.7
                    , network                    >= 2.6
    else
       Build-Depends: network                    >= 2 && < 2.6
    ghc-options:  -Wall -threaded -fno-warn-unused-do-bind

executable gitit2
    main-is:    gitit2.hs
    hs-source-dirs: src
    build-depends:
                   base                            >= 4.8           && < 4.9
                 , bytestring                    >= 0.10        && < 0.11
                 , containers                   >= 0.5           && < 0.6
                 , directory                      >= 1.2           && < 1.3
                 , filepath                        >= 1.4           && < 1.5
                 , filestore                       >= 0.5           && < 0.7
                 , http-conduit                 >= 2.0           && < 2.2
                 , network                        >= 2.6           && < 2.6.3
                 , pandoc                          >= 1.17         && < 1.18
                 , pandoc-types                >= 1.16       && < 1.17
                 , syb                                 >= 0.4          && < 0.7
                 , text                                >= 1.2          && < 1.4
                 , utf8-string                     >= 1.0           && < 1.1
                 , warp                               >= 3.2          && < 4.8
                 , yaml                               >= 0.8          && < 0.9
                 , yesod                             >= 1.4           && < 1.5
                 , yesod-auth                    >= 1.4        && < 1.5
                 , yesod-static                  >= 1.5          && < 1.6
                 , gitit2
    ghc-options:  -Wall -threaded -fno-warn-unused-do-bind
    if flag(executable)
       buildable:  True
    else
       buildable:  False
